[Fix]:line spacing fixed

--- a/documentation/styles.css
+++ b/documentation/styles.css
@@ -158,7 +158,8 @@ color:var(--secondary-color);
 .comp-title{
   text-align:center;
   scroll-margin-top: 3.5rem;
-  margin-top: 1rem;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 @media  only screen and (max-width: 768px)
